Fri Dec 19 09:50:30 1997  Bernd Schmidt <crux@ohara.Informatik.RWTH-Aachen.DE>

	* combine.c (simplify_rtx, case ABS): Don't get confused by a
	VOIDmode operand.

	* i386.c (notice_update_cc): Remove bogus pentium GCC code.

Fri Dec 19 09:39:48 1997  Jeffrey A Law  (law@cygnus.com)

	* i386/t-sol2 (CRTSTUFF_T_CFLAGS): Turn on the optimizer.

	* stmt.c (warn_if_unused_value): Don't warn for TRY_CATCH_EXPR.

	* stmt.c (expand_asm_operands): If an ASM has no outputs, then treat
	it as volatile.

Wed Dec  3 01:13:45 1997  Jeffrey A Law  (law@cygnus.com)

	* version.c: Update for egcs-1.0 release.

Mon Dec  1 15:36:13 1997  Jeffrey A Law  (law@cygnus.com)

	* version.c: Bump for snapshot.

Tue Nov 25 14:08:12 1997  Jim Wilson  <wilson@cygnus.com>

	* mips.md (fix_truncdfsi2, fix_truncsfsi2, fix_truncdfdi2,
	fix_truncsfdi2): Change *.

Sun Nov 30 19:59:20 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* stmt.c (expand_decl_cleanup): Update thisblock after eh_region_start.

Sat Nov 29 12:44:57 1997  David Edelsohn  <edelsohn@mhpcc.edu>

	* rs6000.c (function_arg_partial_nregs): Undo Nov. 26 patch.

	* rs6000/aix41.h (ASM_CPU_SPEC): Define.

Fri Nov 28 10:00:27 1997  Jeffrey A Law  (law@cygnus.com)

	* sh/elf.h (PREFERRED_DEBUGGING_TYPE): Prefer stabs again.

	* arm.md (movsfcc, movdfcc): Fix "patch" lossage.

	* configure.in: Fix NCR entries.

Thu Nov 27 12:20:19 1997  Jeffrey A Law  (law@cygnus.com)

	* version.c: Bump for snapshot.
	
	* flow.c (find_basic_blocks): Handle cfg issues for rethrows and
	nested exceptions correctly.

	* unroll.c (find_splittable_givs): Don't split givs with a dest_reg
	that was created by loop.

Thu Nov 27 09:34:58 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* expr.c (preexpand_calls): Don't look past a TRY_CATCH_EXPR.

	* except.c (expand_start_all_catch): One more do_pending_stack_adjust.

Thu Nov 27 09:32:39 1997  Richard Earnshaw  (rearnsha@arm.com)

	* arm.md (movsfcc): If not TARGET_HARD_FLOAT, ensure operand[3] 
	valid.
